# mlm-form

./: .gitignore  .pre-commit-config.yaml  README.md  example.json  main.py  mre.py  pyproject.toml  requirements.txt  test-seg.json  test.json  test.py  vercel.json
src/mlm_form/: __init__.py  __main__.py  app.py  make_item.py  session.py  styles.py  templates.py  validation.py
src/mlm_form/js/: copy_to_clipboard.js  download_to_file.js
